force-app/main/default/objects/User_Prima_Role__c/User_Prima_Role__c.object-meta.xml
<CustomObject>
    <label>User Prima Role</label>
    <nameField>
        <displayFormat>UPR-{00000000}</displayFormat>
        <label>User Prima Role ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Prima Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>