force-app/main/default/objects/User_Prima_Role__c/fields/Initial_Sending_Failed__c.field-meta.xml
<CustomField>
    <fullName>Initial_Sending_Failed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked when initial sending to Prima (triggered after changes are approved) results with error.</description>
    <label>Initial Sending Failed</label>
    <type>Checkbox</type>
</CustomField>