force-app/main/default/objects/User_Prima_Role__c/fields/Prima_Role__c.field-meta.xml
<CustomField>
    <fullName>Prima_Role__c</fullName>
    <label>Prima Role</label>
    <referenceTo>Prima_Role__c</referenceTo>
    <relationshipLabel>User Prima Roles</relationshipLabel>
    <relationshipName>User_Prima_Roles</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>