force-app/main/default/objects/User_Prima_Role__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assign</fullName>
                <label>To be Assigned</label>
            </value>
            <value>
                <fullName>Assign Requested</fullName>
            </value>
            <value>
                <fullName>Assigned</fullName>
            </value>
            <value>
                <fullName>Remove</fullName>
                <label>To be Removed</label>
            </value>
            <value>
                <fullName>Remove Requested</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>