force-app/main/default/objects/User_Prima_Role__c/fields/User_Entry__c.field-meta.xml
<CustomField>
    <fullName>User_Entry__c</fullName>
    <label>User Entry</label>
    <referenceTo>User_Entry__c</referenceTo>
    <relationshipLabel>User Prima Roles</relationshipLabel>
    <relationshipName>User_Prima_Roles</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>